# tracengine

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
tracengine/data/: descriptors.py  loader.py
tracengine/gui/: main_window.py  plot_window.py
tracengine/gui/dialogs/: __init__.py  processing.py
tracengine/processing/: channel_utils.py
tracengine/project/: config.py  structure.py
tracetool/data/: descriptors.py  loader.py
tracetool/detectors/: base.py
tracetool/gui/: main_window.py  plot_window.py
tracetool/gui/plot/: plotarea.py  plotrow.py
tracetool/gui/runs/: runpanel.py
tracetool/metrics/: base.py
