[project]
name = "tracetool"
version = "1.0.0"
description = "Time-series Representation and Annotation for Computational Experiments"
authors = [{name="Abdullah Zafar", email="abdullah.zafar@umontreal.ca"}]
license = { text="MIT" }
requires-python = ">=3.8"
dependencies = [
]


[project.scripts]
trace = "tracetool.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]