[project]
name = "tracengine"
version = "0.1.2"
description = "Time-series Representation and Annotation for Computational Experiments"
authors = [{name="Abdullah Zafar", email="abdullah.zafar@umontreal.ca"}]
license = { text="BSD-3-Clause" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "PyQt6>=6.0",
    "pyqtgraph>=0.13",
    "networkx>=2.6",
]

[project.scripts]
tracengine = "tracengine.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]